Added user/me endpoint
